Big fix to disconnection-reconnection management
Added synchronized to methods of ViewTUI
Change of indexing in rooms and hand cards for tui commands